--- a/notebook/12. roles and permissions.ipynb
+++ b/notebook/12. roles and permissions.ipynb
@@ -283,17 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "865f0d5f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RoleAssignmentRead(id=UUID('37b51260-9495-4e0c-a011-60c3447a2e8e'), user='1', role='viewer', tenant='default', resource_instance=None, resource_instance_id=None, user_id=UUID('1d57f26b-e304-4acf-9ce4-33d2d8bf7c28'), role_id=UUID('d98b3088-8133-4e16-9333-65efa39c755a'), tenant_id=UUID('8f66027e-4036-402a-8014-22b19b730966'), organization_id=UUID('b6bfc051-b587-4573-b18a-874acb455d50'), project_id=UUID('e9324f4d-a7da-4c8f-ad00-10982eb0514f'), environment_id=UUID('3d77f907-dd64-4833-a698-8ba601079ccb'), created_at=datetime.datetime(2025, 6, 19, 10, 21, 35, tzinfo=datetime.timezone.utc))"
+       "RoleAssignmentRead(id=UUID('4db6a85a-9657-4b82-b546-fe8110ea240a'), user='1', role='admin', tenant='default', resource_instance=None, resource_instance_id=None, user_id=UUID('1d57f26b-e304-4acf-9ce4-33d2d8bf7c28'), role_id=UUID('e0955183-f580-418e-890f-2b84fdba0975'), tenant_id=UUID('8f66027e-4036-402a-8014-22b19b730966'), organization_id=UUID('b6bfc051-b587-4573-b18a-874acb455d50'), project_id=UUID('e9324f4d-a7da-4c8f-ad00-10982eb0514f'), environment_id=UUID('3d77f907-dd64-4833-a698-8ba601079ccb'), created_at=datetime.datetime(2025, 6, 19, 10, 27, 32, tzinfo=datetime.timezone.utc))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
    "source": [
     "response=await permit.api.users.assign_role({\n",
     "    \"user\":f\"{user.id}\", # type: ignore\n",
-    "    \"role\":\"viewer\",\n",
+    "    \"role\":\"admin\",\n",
     "    \"tenant\":\"default\"\n",
     "    }\n",
     "        )\n",
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "id": "2b323d4d",
    "metadata": {},
    "outputs": [
@@ -320,26 +320,18 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "await permit.check(f\"{user.id}\", \"read\",'document')"
+    "await permit.check(f\"{user.id}\", \"delete\",'document')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ca7976a9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "id": "2275286d",
    "metadata": {},
    "outputs": [],
@@ -349,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "id": "5b8cc394",
    "metadata": {},
    "outputs": [],
@@ -361,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "id": "84153c4e",
    "metadata": {},
    "outputs": [],
@@ -371,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "id": "bcd96d8f",
    "metadata": {},
    "outputs": [],
@@ -382,13 +374,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "id": "9c1c9b58",
    "metadata": {},
    "outputs": [],
    "source": [
     "import uuid\n",
-    "config = {\"configurable\": {\"user_id\": \"2\", \"thread_id\": uuid.uuid4()}}\n",
+    "config = {\"configurable\": {\"user_id\": \"1\", \"thread_id\": uuid.uuid4()}}\n",
     "\n",
     "response=supervisor.invoke({\"messages\":\n",
     "              [\n",
@@ -403,17 +395,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "id": "3b3e91fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Your most recent documents have been listed. If you need further assistance with them, feel free to ask!'"
+       "'Your most recent documents are:\\n\\n1. **Interstellar**\\n2. **Oppenheimer**\\n3. **Inception**\\n4. **Original Sin**\\n5. **Haider Movie Summary**\\n\\nIf you need further assistance with these documents, feel free to ask!'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,17 +416,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "id": "265fa285",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"The document with ID 6 has been deleted. If there's anything else you need, feel free to ask!\""
+       "'A random document with the document ID 3 has been successfully deleted. If you need any more help, feel free to ask!'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +436,7 @@
     "response=supervisor.invoke({\"messages\":\n",
     "              [\n",
     "                  {\"role\":\"user\",\n",
-    "                   \"content\":f\"delete the document with document id {doc_id}\"\n",
+    "                   \"content\":f\"delete a random document with document id \"\n",
     "                   }\n",
     "            ]\n",
     "                },\n",
